<package>
  <name>continual_planning_msgs</name>
  <version>0.0.0</version>
  <description>continual_planning_msgs</description>
  <maintainer email="hertle@informatik.uni-freiburg.de">Andreas Hertle</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/continual_planning_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>


