<package>
  <name>tfd_modules</name>
  <version>0.0.0</version>
  <description>
      This package contains the symbolic temporal planner Temporal Fast Downward with a modular interface (TFD/M).
  </description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Maintained by Christian Dornhege (see AUTHORS file).</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/tfd_modules</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>continual_planning_executive</build_depend>
  <build_depend>continual_planning_msgs</build_depend>
  <build_depend>libqt4-dev</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>continual_planning_executive</run_depend>
  <run_depend>continual_planning_msgs</run_depend>
  <run_depend>libqt4-dev</run_depend>
  
  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/downward/opl/interface" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltfd_module_api -ldl -ltfd_opl_interface" />
    <continual_planning_executive plugin="${prefix}/tfdm_interface_plugin.xml" />
  </export>

</package>

